--- a/src/main/resources/templates/note/index.html
+++ b/src/main/resources/templates/note/index.html
@@ -8,9 +8,8 @@
 <div th:replace="fragment/navbar :: navbar('home')">Navbar here</div>
 <!-- EO: Navbar -->
 
-<h1 class="text-center text-dark my-4">Notes For <span th:text="${allNotes.get(0).getCategoryName()}"></span></h1>
 <div class="text-center" th:if="${allNotes.size() == 0}">
-    <em>You still do not have any notes created.</em>
+    <h3 class="my-2 font-italic">You still do not have any notes created.</h3>
     <hr>
     <a type="button"
        th:href="@{/categories/notes/create/{id}(id=${categoryID})}"
@@ -25,6 +24,7 @@
     <!--    </button>-->
 </div>
 <div class="text-center" th:if="${allNotes.size() > 0}">
+    <h1 class="text-center text-dark my-4">Notes For <span th:text="${allNotes.get(0).getCategoryName()}"></span></h1>
     <hr>
     <a type="button"
        th:href="@{/categories/notes/create/{id}(id=${categoryID})}"
@@ -43,13 +43,16 @@
                     <div class="card-body text-center">
                         <p class="card-text font-italic" th:utext="|${#strings.substring(note.description,0,20)}...|"></p><hr>
                         <div class="row">
-                            <div class="col"><a href="#" class="btn btn-outline-success w-100">View Note</a></div>
+                            <div class="col"><a th:href="@{/categories/notes/details/{id}(id=${note.id})}" class="btn btn-outline-success w-100">View Note</a></div>
 <!--                            <div class="col"><span th:text="${#strings.substring(text,0,99)}(text=${note.commentCount})"></span></div>-->
                         </div>
                         <div class="row mx-4 my-3 text-right">
                             <div class="col">
                                 <a th:href="@{/categories/notes/edit/{id}(id=${note.id})}" class="btn btn-outline-warning w-100 my-1">Edit</a>
-                                <a href="#" class="btn btn-outline-danger w-100 my-1">Delete</a>
+                                <form id="formDelete" th:action="@{/categories/notes/delete}" method="post">
+                                    <input id="deleteId" name="deleteId" type="hidden" th:value="*{note.id}"/>
+                                    <button type="submit" class="btn btn-outline-danger w-100 my-1">Delete</button>
+                                </form>
                             </div>
                             <div class="col"><span class="font-italic text-muted">Additions to this note: </span><h1 class="text-info" th:text="|${note.commentCount}|"></h1></div>
                             <div class="col"><span class="font-italic text-muted">Priority scale: </span><h1 class="text-success" th:text="|${note.priority} /5|"></h1></div>
