Comments can be edited and deleted, redirections fixed, realation between comment and note is one to many now.

--- a/src/main/resources/templates/category/categoryCreate.html
+++ b/src/main/resources/templates/category/categoryCreate.html
@@ -31,6 +31,7 @@
                       th:errorclass="is-invalid"
                       id="description"
                       rows="3"></textarea>
+            <small class="form-text text-left text-muted">Description is optional*</small>
             <div class="invalid-feedback" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></div>
         </div>
 
