--- a/src/main/resources/templates/fragment/head.html
+++ b/src/main/resources/templates/fragment/head.html
@@ -7,7 +7,7 @@
     <title>Life Tracker</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" th:href="@{../../../webjars/bootstrap/4.5.0/css/bootstrap.min.css}" type="text/css">
+    <link rel="stylesheet" th:href="@{../../../../../../webjars/bootstrap/4.5.0/css/bootstrap.min.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/css/lifeTracker.css}" type="text/css">
     <link rel="stylesheet" th:href="@{https://use.fontawesome.com/releases/v5.0.8/css/all.css}">
 
