Note view added

--- a/src/main/resources/templates/category/index.html
+++ b/src/main/resources/templates/category/index.html
@@ -37,7 +37,7 @@
                     <div class="card-body text-center">
                         <p class="card-text font-italic" th:text="${category.description}"></p>
                         <div class="row">
-                            <div class="col"><a th:href="@{/categories/notes/{id}(id=${category.id})}" class="btn btn-outline-success w-100">Notes</a></div>
+                            <div class="col"><a th:href="@{/notes/category/{id}(id=${category.id})}" class="btn btn-outline-success w-100">Notes</a></div>
                             <div class="col"><span th:text="${category.noteCount}"></span></div>
                         </div><hr>
                         <div class="row">
