--- a/src/main/resources/templates/note/index.html
+++ b/src/main/resources/templates/note/index.html
@@ -11,38 +11,42 @@
 <div class="text-center" th:if="${allNotes.size() == 0}">
     <h3 class="my-2 font-italic">You still do not have any notes created.</h3>
     <hr>
-    <a type="button"
-       th:href="@{/categories/notes/create/{id}(id=${categoryID})}"
-       class="btn btn-outline-primary btn-lg">
-        Create a new note
-    </a>
 </div>
 <div class="text-center" th:if="${allNotes.size() > 0}">
-    <h1 class="text-center text-dark my-4">Notes For <span th:text="${allNotes.get(0).getCategoryName()}"></span></h1>
+    <h1 class="text-center text-dark my-4">Life Tracker Notes</h1>
     <hr>
     <div class="row">
         <div class="col">
-            <a type="button"
-               th:href="@{/categories/notes/create/{id}(id=${categoryID})}"
-               class="btn btn-outline-primary btn-lg">
-                Create a new note
-            </a>
-        </div>
-        <div class="col">
             <input type="hidden" id="sortId" th:value="*{sortId}">
             <div class="dropdown show">
-                <a class="btn btn-outline-secondary btn-lg dropdown-toggle" href="#" role="button"
+                <a class="btn btn-outline-secondary btn-lg w-25 dropdown-toggle" href="#" role="button"
                    id="dropdownMenuLink" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false"
-                onclick="activateItem()">
+                   onclick="activateItem()">
                     Sort By
                 </a>
 
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" id="0" th:href="@{/categories/notes/{id}/{noteSortId}(id=${categoryID}, noteSortId=0)}">Id (DESC)</a>
-                    <a class="dropdown-item" id="1" th:href="@{/categories/notes/{id}/{noteSortId}(id=${categoryID}, noteSortId=1)}">Priority (DESC)</a>
-                    <a class="dropdown-item" id="2" th:href="@{/categories/notes/{id}/{noteSortId}(id=${categoryID}, noteSortId=2)}">Created on (ASC)</a>
-                    <a class="dropdown-item" id="3" th:href="@{/categories/notes/{id}/{noteSortId}(id=${categoryID}, noteSortId=3)}">Last updated on (DESC)</a>
+                    <a class="dropdown-item" id="0" th:href="@{/notes/{noteSortId}/view/{noteViewId}(noteViewId=${viewId}, noteSortId=0)}">Id (DESC)</a>
+                    <a class="dropdown-item" id="1" th:href="@{/notes/{noteSortId}/view/{noteViewId}(noteViewId=${viewId}, noteSortId=1)}">Priority (DESC)</a>
+                    <a class="dropdown-item" id="2" th:href="@{/notes/{noteSortId}/view/{noteViewId}(noteViewId=${viewId}, noteSortId=2)}">Created on (ASC)</a>
+                    <a class="dropdown-item" id="3" th:href="@{/notes/{noteSortId}/view/{noteViewId}(noteViewId=${viewId}, noteSortId=3)}">Last updated on (DESC)</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <input type="hidden" id="viewId" th:value="*{viewId}">
+            <div class="dropdown show">
+                <a class="btn btn-outline-dark btn-lg w-25 dropdown-toggle" href="#" role="button"
+                   id="dropdownMenuForView" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false"
+                   onclick="activateItem()">
+                    View By
+                </a>
+
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuForView">
+                    <a class="dropdown-item" th:href="@{/notes/{noteSortId}/view/{noteViewId}(noteSortId=${sortId}, noteViewId=0)}">Full Notes</a>
+                    <a class="dropdown-item" th:href="@{/notes/{noteSortId}/view/{noteViewId}(noteSortId=${sortId}, noteViewId=1)}">Small Notes</a>
                 </div>
             </div>
         </div>
@@ -50,9 +54,9 @@
 
 </div>
 <div class="container">
-    <div class="row">
-        <th:block th:each="note : ${allNotes}">
-            <div class="col-lg-10 my-5 mx-auto">
+    <div class="row my-5">
+        <th:block th:each="note : ${allNotes}" th:if="${note.getClass().getSimpleName() == 'NoteViewModel'}">
+            <div class="col-lg-10 mb-5 mx-auto">
                 <div class="card h-100">
                     <div class="card-header bg-dark text-light text-center">
                         <h5 class="card-title" th:text="${note.name}"></h5>
@@ -60,13 +64,13 @@
                     <div class="card-body text-center">
                         <p class="card-text font-italic" th:utext="|${#strings.substring(note.description,0,20)}...|"></p><hr>
                         <div class="row">
-                            <div class="col"><a th:href="@{/categories/notes/details/{id}(id=${note.id})}" class="btn btn-outline-success w-100">View Note</a></div>
-<!--                            <div class="col"><span th:text="${#strings.substring(text,0,99)}(text=${note.commentCount})"></span></div>-->
+                            <div class="col"><a th:href="@{/notes/details/{id}(id=${note.id})}" class="btn btn-outline-success w-100">View Note</a></div>
+                            <!--                            <div class="col"><span th:text="${#strings.substring(text,0,99)}(text=${note.commentCount})"></span></div>-->
                         </div>
                         <div class="row mx-4 my-3 text-right">
                             <div class="col">
-                                <a th:href="@{/categories/notes/edit/{id}(id=${note.id})}" class="btn btn-outline-warning w-100 my-1">Edit</a>
-                                <form id="formDelete" th:action="@{/categories/notes/delete}" method="post">
+                                <a th:href="@{/notes/edit/{id}(id=${note.id})}" class="btn btn-outline-warning w-100 my-1">Edit</a>
+                                <form id="formDelete" th:action="@{/notes/delete}" method="post">
                                     <input id="deleteId" name="deleteId" type="hidden" th:value="*{note.id}"/>
                                     <button type="submit" class="btn btn-outline-danger w-100 my-1">Delete</button>
                                 </form>
@@ -83,6 +87,29 @@
                     </div>
                 </div>
             </div>
+        </th:block>
+        <th:block class="list-group" th:each="note : ${allNotes}" th:if="${note.getClass().getSimpleName() == 'NoteSmallViewModel'}">
+                <a th:href="@{/notes/details/{id}(id=${note.id})}" style="max-width:45%;border-radius: 15px 50px;" class="list-group-item
+                 bg-light text-secondary my-2
+                  mx-auto list-group-item-action
+                   flex-column align-items-start">
+                    <div class="row">
+                        <div class="col-2">
+                            <h1 th:text="${allNotes.indexOf(note) + 1}"></h1>
+                        </div>
+                        <div class="col-8">
+                            <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1" th:text="${note.name}"></h5>
+                            </div>
+                            <p class="mb-1" th:utext="|${#strings.substring(note.description,0,20)}...|"></p>
+                            <div class="row d-flex justify-content-end">
+                                <small>Priority:</small>
+                                <h6 class="text-success ml-2" th:text="|${note.priority} /5|"></h6>
+                            </div>
+                        </div>
+                    </div>
+
+                </a>
         </th:block>
     </div>
 </div>
