--- a/src/main/resources/templates/comment/editCommentNote.html
+++ b/src/main/resources/templates/comment/editCommentNote.html
@@ -35,7 +35,7 @@
         <h5>You can add your first comment from here: </h5>
     </div>
     <th:block th:if="${note.comments.size() > 0}" th:each="comment : ${note.comments}">
-        <form th:action="@{/categories/notes/{id}/comment/edit/{editedId}(id=${note.id}, editedId=${commentId})}" th:if="${comment.id == commentId}" method="post" th:object="${commentEditForm}">
+        <form th:action="@{/notes/{id}/comment/edit/{editedId}(id=${note.id}, editedId=${commentId})}" th:if="${comment.id == commentId}" method="post" th:object="${commentEditForm}">
             <div class="card w-75 my-4">
                 <div class="card-body">
                     <div class="form-group">
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                         <div class="col text-right">
-                            <a class="btn btn-outline-danger" th:href="@{/categories/notes/details/{id}(id=${note.id})}">Back</a>
+                            <a class="btn btn-outline-danger" th:href="@{/notes/details/{id}(id=${note.id})}">Back</a>
                             <button type="submit" class="btn btn-outline-primary w-50">Edit Comment</button>
                         </div>
                     </div>
