--- a/src/main/resources/templates/note/createNote.html
+++ b/src/main/resources/templates/note/createNote.html
@@ -9,7 +9,7 @@
 
 <div class="container center text-center my-4 w-50">
     <h1>Add new note</h1>
-    <form th:action="@{/categories/notes/create}" method="post" th:object="${createNote}">
+    <form th:action="@{/notes/create}" method="post" th:object="${createNote}">
         <div class="form-group">
             <label for="name">Name</label>
             <input type="text"
